добавлена страница четыре правила

--- a/how-to-learn.html
+++ b/how-to-learn.html
@@ -7,7 +7,7 @@
   <title>Научиться учиться</title>
   <meta name="description" content="Как учиться, проблемы в учёбе, цифры и факты об обучении, метод Фейнмана.">
   <meta name="keywords" content="учиться, метод Фейнмана, принципы обучения">
-  <meta name="author" content="Артём">
+  <meta name="author" content="Волошин Артём">
 </head>
 <body>
   <div class="page">
