--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,8 @@
   <title>Портфолио</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Волошин Артём, портфолио">
-  <meta name="keywords" content="portfolio, html, css, javascript">
-  <meta name="author" content="Voloshin Artyom">
+  <meta name="keywords" content="портфолио, html, css, javascript">
+  <meta name="author" content="Волошин Артём">
 </head>
 <body class="page">
   <header class="flex-column header">
@@ -28,7 +28,7 @@
           <a href="#" class="project__overlay">Обложка музыкального альбома</a>
         </li>
         <li class="project project_name_four-design-rules project_width_l project_height_l">
-          <a href="#" class="project__overlay">Посадочная страница</a>
+          <a href="four-rules.html" class="project__overlay">Посадочная страница</a>
         </li>
       </ul>
     </section>
@@ -63,7 +63,8 @@
           <a href="russian-travel_lang_ru.html" class="project__overlay">Адаптивная вёрстка</a>
         </li>
         <li class="project project_name_mesto project_width_m project_height_m">
-          <a href="#" class="project__overlay">Приложение на JavaScript</a>
+<!--          <a href="#" class="project__overlay">Приложение на JavaScript</a>-->
+          <a href="#" class="project__overlay">в разработке</a>
         </li>
       </ul>
     </section>
