--- a/russian-travel_lang_en.html
+++ b/russian-travel_lang_en.html
@@ -7,7 +7,7 @@
   <title>Travelling in Russia</title>
   <meta name="description" content="Beautiful places in Russia for traveling.">
   <meta name="keywords" content="Russian, travel, nature">
-  <meta name="author" content="Artyom">
+  <meta name="author" content="Voloshin Artyom">
 </head>
 <body class="page">
   <header class="header">
