--- a/russian-travel_lang_ru.html
+++ b/russian-travel_lang_ru.html
@@ -7,7 +7,7 @@
   <title>Путешествия по России</title>
   <meta name="description" content="Красивые места России для путешествий.">
   <meta name="keywords" content="Россия, путешествие, природа">
-  <meta name="author" content="Артём">
+  <meta name="author" content="Волошин Артём">
 </head>
 <body class="page">
   <header class="header">
