--- a/portfolio.html
+++ b/portfolio.html
@@ -12,18 +12,18 @@
 <body class="page">
   <header class="flex-column header">
     <h1 class="header__title">Портфолио</h1>
-    <h1 class="header__subtitle" lang="ru">Артём</h1>
+    <h2 class="header__subtitle" lang="ru">Волошин Артём</h1>
   </header>
   <nav class="menu">
     <p class="menu__text">Оглавление:</p>
-    <a href="#beginner" class="menu__link menu__link_active">Первые шаги в HTML и CSS</a>
+    <a href="#beginner" class="menu__link menu__link_active">Простые сайты с HTML и CSS</a>
 <!--    <a href="#frameworks" class="menu__link">Библиотеки JavaScript</a>-->
     <a href="#practice" class="menu__link">Практика HTML, CSS и JavaScript</a>
   </nav>
   <main class="content">
     <section id="beginner">
-      <h2 class="content__title">Первые шаги в HTML и CSS</h2>
-      <ul class="flex-row list flex-row_space_bottom">
+      <h2 class="content__title">Простые сайты с HTML и CSS</h2>
+      <ul class="content__row">
         <li class="project project_name_the-life-of-coder project_width_l project_height_l">
           <a href="#" class="project__overlay">Обложка музыкального альбома</a>
         </li>
@@ -55,11 +55,11 @@
     </section>-->
     <section id="practice">
       <h2 class="content__title">Практика HTML, CSS и JavaScript</h2>
-      <ul class="flex-row list">
+      <ul class="content__row">
         <li class="project project_name_how-to-learn project_width_m project_height_m">
           <a href="how-to-learn.html" class="project__overlay">CSS-анимации</a>
         </li>
-        <li class="project project_name_across-russia project_width_l project_height_m">
+        <li class="project project_name_russian-travel project_width_l project_height_m">
           <a href="russian-travel_lang_ru.html" class="project__overlay">Адаптивная вёрстка</a>
         </li>
         <li class="project project_name_mesto project_width_m project_height_m">
