адаптирована страница 'четыре правила вёрстки'

--- a/four-rules.html
+++ b/four-rules.html
@@ -39,7 +39,7 @@
     </div>
   </section>
   <footer class='footer'>
-    <h4 class='footer__author'>Артём</h4>
+    <h4 class='footer__author'>&#169; 2021. Волошин Артём</h4>
   </footer>
 </body>
 </html>
