--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
   <header class="flex-column header">
     <h1 class="header__title">Портфолио</h1>
     <h2 class="header__subtitle" lang="ru">Волошин Артём</h1>
+    <p class="header__e-mail-address"><span class="header__e-mail">e-mail:</span> artemiyc@list.ru</p>
   </header>
   <nav class="menu">
     <p class="menu__text">Оглавление:</p>
@@ -63,8 +64,7 @@
           <a href="russian-travel_lang_ru.html" class="project__overlay">Адаптивная вёрстка</a>
         </li>
         <li class="project project_name_mesto project_width_m project_height_m">
-<!--          <a href="#" class="project__overlay">Приложение на JavaScript</a>-->
-          <a href="#" class="project__overlay">в разработке</a>
+          <a href="https://artyom774.github.io/mesto/" class="project__overlay">Приложение на JavaScript</a>
         </li>
       </ul>
     </section>
