добавлена страница "прокрастинация"

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,17 @@
   </header>
   <nav class="menu">
     <p class="menu__text">Оглавление:</p>
-    <a href="#beginner" class="menu__link menu__link_active">Простые сайты с HTML и CSS</a>
+    <a href="#beginner" class="menu__link menu__link_active">Простые сайты HTML, CSS и JavaScript</a>
 <!--    <a href="#frameworks" class="menu__link">Библиотеки JavaScript</a>-->
     <a href="#practice" class="menu__link">Практика HTML, CSS и JavaScript</a>
   </nav>
   <main class="content">
     <section id="beginner">
-      <h2 class="content__title">Простые сайты с HTML и CSS</h2>
+      <h2 class="content__title">Простые сайты HTML, CSS и JavaScript</h2>
       <ul class="content__row">
-        <li class="project project_name_the-life-of-coder project_width_l project_height_l">
-          <a href="#" class="project__overlay">Обложка музыкального альбома</a>
+        <li class="project project_width_l project_height_l">
+          <a href="procrastinate.html" class="project__overlay">Первое приложение</a>
+          <video class="project__video" src="https://code.s3.yandex.net/web-code/procrastinate.mov" autoplay muted loop></video>
         </li>
         <li class="project project_name_four-design-rules project_width_l project_height_l">
           <a href="four-rules.html" class="project__overlay">Посадочная страница</a>
