--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
       <ul class="content__row">
         <li class="project project_width_l project_height_l">
           <a href="procrastinate.html" class="project__overlay">Первое приложение</a>
-          <video class="project__video" src="https://code.s3.yandex.net/web-code/procrastinate.mov" autoplay muted loop></video>
+          <video class="project__video" src="video/procrastinate.mp4" autoplay muted loop></video>
         </li>
         <li class="project project_name_four-design-rules project_width_l project_height_l">
           <a href="four-rules.html" class="project__overlay">Посадочная страница</a>
