--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,19 @@
         </li>
       </ul>
     </section>
+    <section class="flex-column">
+      <h2 class="content__title">Навыки работы</h2>
+      <p class="content__text"><span class="font-weight_bold color_red">1.</span> Умение работать с макетом страница, в том числе с Figma.<br>
+        <span class="font-weight_bold color_red">2.</span> Способность следовать БЭМ-методологии при оформление и распределение CSS-файлов с целью дальнейшего их использования.<br>
+        <span class="font-weight_bold color_red">3.</span> Работа с теами iframe.<br>
+        <span class="font-weight_bold color_red">4.</span> Умение верстать страницу с использованием flex- и grid-блоков.<br>
+        <span class="font-weight_bold color_red">5.</span> Адаптировать страницу для устройств с различными расширениями.<br>
+        <span class="font-weight_bold color_red">6.</span> Задавать различные CSS-анимации.<br>
+        <span class="font-weight_bold color_red">7.</span> Связывать вёрстку с JavaScript.<br>
+        <span class="font-weight_bold color_red">8.</span> Отслеживать события через JavaScript и выполнять скрипты.<br>
+        <span class="font-weight_bold color_red">9.</span> Валидация форм через JavaScript.<br>
+        <span class="font-weight_bold color_red">10.</span> Подключать модули JavaScript, эскпортировать и импортивать переменные, классы и функции между модулями.</p>
+    </section>
   </main>
   <footer class="footer">
     <div class="footer__logo"></div>
