добавил пункт 11 в readme

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,8 @@
         <span class="font-weight_bold color_red">7.</span> Связывать вёрстку с JavaScript.<br>
         <span class="font-weight_bold color_red">8.</span> Отслеживать события через JavaScript и выполнять скрипты.<br>
         <span class="font-weight_bold color_red">9.</span> Валидация форм через JavaScript.<br>
-        <span class="font-weight_bold color_red">10.</span> Подключать модули JavaScript, эскпортировать и импортивать переменные, классы и функции между модулями.</p>
+        <span class="font-weight_bold color_red">10.</span> Подключать модули JavaScript, эскпортировать и импортивать переменные, классы, дочерние классы и функции между модулями.</p>
+	<span class="font-weight_bold color_red">11.</span> Работа с webpack, сборка проекта и подготовка его к загрузке на сервер.</p>
     </section>
   </main>
   <footer class="footer">
