--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,13 @@
   </header>
   <nav class="menu">
     <p class="menu__text">Оглавление:</p>
-    <a href="#beginner" class="menu__link menu__link_active">Простые сайты HTML, CSS и JavaScript</a>
+<!--    <a href="#beginner" class="menu__link menu__link_active">Простые сайты HTML, CSS и JavaScript</a>-->
 <!--    <a href="#frameworks" class="menu__link">Библиотеки JavaScript</a>-->
-    <a href="#practice" class="menu__link">Практика HTML, CSS и JavaScript</a>
+    <a href="#practice" class="menu__link menu__link_active">Примеры HTML, CSS и JavaScript</a>
+    <a href="#skills" class="menu__link">Навыки работы</a>
   </nav>
   <main class="content">
-    <section id="beginner">
+<!--    <section id="beginner">
       <h2 class="content__title">Простые сайты HTML, CSS и JavaScript</h2>
       <ul class="content__row">
         <li class="project project_width_l project_height_l">
@@ -33,7 +34,7 @@
           <a href="four-rules.html" class="project__overlay">Посадочная страница</a>
         </li>
       </ul>
-    </section>
+    </section>-->
 <!--<section id="frameworks">
       <h2 class="content__title">Библиотеки JavaScript</h2>
       <div class="flex-row flex-row_reversed flex-row_space_bottom">
@@ -56,7 +57,7 @@
       </div>
     </section>-->
     <section id="practice">
-      <h2 class="content__title">Практика HTML, CSS и JavaScript</h2>
+      <h2 class="content__title">Примеры HTML, CSS и JavaScript</h2>
       <ul class="content__row">
         <li class="project project_name_how-to-learn project_width_m project_height_m">
           <a href="how-to-learn.html" class="project__overlay">CSS-анимации</a>
@@ -69,7 +70,7 @@
         </li>
       </ul>
     </section>
-    <section class="flex-column">
+    <section class="flex-column" id="skills">
       <h2 class="content__title">Навыки работы</h2>
       <p class="content__text"><span class="font-weight_bold color_red">1.</span> Умение работать с макетом страница, в том числе с Figma.<br>
         <span class="font-weight_bold color_red">2.</span> Способность следовать БЭМ-методологии при оформление и распределение CSS-файлов с целью дальнейшего их использования.<br>
@@ -80,8 +81,13 @@
         <span class="font-weight_bold color_red">7.</span> Связывать вёрстку с JavaScript.<br>
         <span class="font-weight_bold color_red">8.</span> Отслеживать события через JavaScript и выполнять скрипты.<br>
         <span class="font-weight_bold color_red">9.</span> Валидация форм через JavaScript.<br>
-        <span class="font-weight_bold color_red">10.</span> Подключать модули JavaScript, эскпортировать и импортивать переменные, классы, дочерние классы и функции между модулями.</p>
-	<span class="font-weight_bold color_red">11.</span> Работа с webpack, сборка проекта и подготовка его к загрузке на сервер.</p>
+        <span class="font-weight_bold color_red">10.</span> Подключать модули JavaScript, эскпортировать и импортивать переменные, классы, дочерние классы и функции между модулями.<br>
+	      <span class="font-weight_bold color_red">11.</span> Работа с webpack, сборка проекта и подготовка его к загрузке на сервер.<br>
+        <span class="font-weight_bold color_red">12.</span> Умение работать с API. Отправлять запросы из JS и обрабатывать ответы в формате JSON.<br>
+        <span class="font-weight_bold color_red">13.</span> Использование React и JSX при написании сайта.<br>
+        <span class="font-weight_bold color_red">14.</span> Управление переменными и DOM-элементами через useState и useEffect.<br>
+        <span class="font-weight_bold color_red">15.</span> Создание многостраничного SPA-приложения через React Router.
+      </p>
     </section>
   </main>
   <footer class="footer">
