--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
       <h2 class="content__title">Навыки работы</h2>
       <p class="content__text"><span class="font-weight_bold color_red">1.</span> Умение работать с макетом страница, в том числе с Figma.<br>
         <span class="font-weight_bold color_red">2.</span> Способность следовать БЭМ-методологии при оформление и распределение CSS-файлов с целью дальнейшего их использования.<br>
-        <span class="font-weight_bold color_red">3.</span> Работа с теами iframe.<br>
+        <span class="font-weight_bold color_red">3.</span> Работа с тегами iframe.<br>
         <span class="font-weight_bold color_red">4.</span> Умение верстать страницу с использованием flex- и grid-блоков.<br>
         <span class="font-weight_bold color_red">5.</span> Адаптировать страницу для устройств с различными расширениями.<br>
         <span class="font-weight_bold color_red">6.</span> Задавать различные CSS-анимации.<br>
