--- a/portfolio.html
+++ b/portfolio.html
@@ -72,21 +72,20 @@
     </section>
     <section class="flex-column" id="skills">
       <h2 class="content__title">Навыки работы</h2>
-      <p class="content__text"><span class="font-weight_bold color_red">1.</span> Умение работать с макетом страница, в том числе с Figma.<br>
-        <span class="font-weight_bold color_red">2.</span> Способность следовать БЭМ-методологии при оформление и распределение CSS-файлов с целью дальнейшего их использования.<br>
+      <p class="content__text"><span class="font-weight_bold color_red">1.</span> Умение работать с макетом страницы в Figma.<br>
+        <span class="font-weight_bold color_red">2.</span> Способность следовать БЭМ-методологии при оформлении и распределении CSS-файлов.<br>
         <span class="font-weight_bold color_red">3.</span> Работа с тегами iframe.<br>
-        <span class="font-weight_bold color_red">4.</span> Умение верстать страницу с использованием flex- и grid-блоков.<br>
-        <span class="font-weight_bold color_red">5.</span> Адаптировать страницу для устройств с различными расширениями.<br>
+        <span class="font-weight_bold color_red">4.</span> Умение верстать страницу с использованием flex- и grid- блоков.<br>
+        <span class="font-weight_bold color_red">5.</span> Адаптировать страницу для различных устройств.<br>
         <span class="font-weight_bold color_red">6.</span> Задавать различные CSS-анимации.<br>
-        <span class="font-weight_bold color_red">7.</span> Связывать вёрстку с JavaScript.<br>
-        <span class="font-weight_bold color_red">8.</span> Отслеживать события через JavaScript и выполнять скрипты.<br>
-        <span class="font-weight_bold color_red">9.</span> Валидация форм через JavaScript.<br>
-        <span class="font-weight_bold color_red">10.</span> Подключать модули JavaScript, эскпортировать и импортивать переменные, классы, дочерние классы и функции между модулями.<br>
-	      <span class="font-weight_bold color_red">11.</span> Работа с webpack, сборка проекта и подготовка его к загрузке на сервер.<br>
-        <span class="font-weight_bold color_red">12.</span> Умение работать с API. Отправлять запросы из JS и обрабатывать ответы в формате JSON.<br>
-        <span class="font-weight_bold color_red">13.</span> Использование React и JSX при написании сайта.<br>
-        <span class="font-weight_bold color_red">14.</span> Управление переменными и DOM-элементами через useState и useEffect.<br>
-        <span class="font-weight_bold color_red">15.</span> Создание многостраничного SPA-приложения через React Router.
+        <span class="font-weight_bold color_red">7.</span> Связывать вёрстку с JavaScript, отслеживать события и выполнять скрипты.<br>
+        <span class="font-weight_bold color_red">8.</span> Валидация форм через JavaScript.<br>
+        <span class="font-weight_bold color_red">9.</span> Подключать модули JavaScript, эскпортировать и импортивать переменные, классы, дочерние классы и функции между модулями.<br>
+	      <span class="font-weight_bold color_red">10.</span> Работа с webpack, сборка проекта и подготовка его к загрузке на сервер.<br>
+        <span class="font-weight_bold color_red">11.</span> Умение работать с API. Отправлять запросы из JS и обрабатывать ответы в формате JSON.<br>
+        <span class="font-weight_bold color_red">12.</span> Использование React и JSX при написании сайта.<br>
+        <span class="font-weight_bold color_red">13.</span> Управление переменными и DOM-элементами через useState, useEffect, useContext и useRef.<br>
+        <span class="font-weight_bold color_red">14.</span> Создание многостраничного SPA-приложения через React Router.
       </p>
     </section>
   </main>
