изменил порядок проектов

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,8 @@
     </section>
     <section class="flex-column" id="skills">
       <h2 class="content__title">Навыки работы</h2>
-      <p class="content__text"><span class="font-weight_bold color_red">1.</span> Умение работать с макетом страницы в Figma.<br>
+      <p class="content__text">
+        <span class="font-weight_bold color_red">1.</span> Умение работать с макетом страницы в Figma.<br>
         <span class="font-weight_bold color_red">2.</span> Способность следовать БЭМ-методологии при оформлении и распределении CSS-файлов.<br>
         <span class="font-weight_bold color_red">3.</span> Работа с тегами iframe.<br>
         <span class="font-weight_bold color_red">4.</span> Умение верстать страницу с использованием flex- и grid- блоков.<br>
