добавлена ссылка на гитхаб

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
     <h1 class="header__title">Портфолио</h1>
     <h2 class="header__subtitle" lang="ru">Волошин Артём</h1>
     <p class="header__e-mail-address"><span class="header__e-mail">e-mail:</span> artemiyc@list.ru</p>
+    <a href="https://github.com/Artyom774" class="header__e-mail-address"><span class="header__e-mail">GitHub:</span> github.com/Artyom774</a>
   </header>
   <nav class="menu">
     <p class="menu__text">Оглавление:</p>
