feat: проект "Научиться учиться" перенесён в отдельный репозиторий

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
       <h2 class="content__title">Примеры HTML, CSS и JavaScript</h2>
       <ul class="content__row">
         <li class="project project_name_how-to-learn project_width_m project_height_m">
-          <a href="how-to-learn.html" class="project__overlay">CSS-анимации</a>
+          <a href="https://artyom774.github.io/how-to-learn/how-to-learn.html" class="project__overlay">CSS-анимации</a>
         </li>
         <li class="project project_name_russian-travel project_width_l project_height_m">
           <a href="russian-travel_lang_ru.html" class="project__overlay">Адаптивная вёрстка</a>
