--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
           <a href="https://artyom774.github.io/how-to-learn/how-to-learn.html" class="project__overlay">CSS-анимации</a>
         </li>
         <li class="project project_name_russian-travel project_width_l project_height_m">
-          <a href="russian-travel_lang_ru.html" class="project__overlay">Адаптивная вёрстка</a>
+          <a href="https://artyom774.github.io/russian-travel/russian-travel_lang_ru.html" class="project__overlay">Адаптивная вёрстка</a>
         </li>
         <li class="project project_name_mesto project_width_m project_height_m">
           <a href="https://artyom774.github.io/mesto/" class="project__overlay">Приложение на JavaScript</a>
