feat: расширен список навыков, проект russian-travel перенесён в отдельный репозиторий

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="pages/portfolio.css">
   <title>Портфолио</title>
+  <link rel="icon" href="./images/yandex_lite_browser_logo_icon_152940.ico" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Волошин Артём, портфолио">
-  <meta name="keywords" content="портфолио, html, css, javascript">
+  <meta name="keywords" content="портфолио, html, css, javascript, react, node.js">
   <meta name="author" content="Волошин Артём">
 </head>
 <body class="page">
@@ -87,12 +88,17 @@
         <span class="font-weight_bold color_red">11.</span> Умение работать с API. Отправлять запросы из JS и обрабатывать ответы в формате JSON.<br>
         <span class="font-weight_bold color_red">12.</span> Использование React и JSX при написании сайта.<br>
         <span class="font-weight_bold color_red">13.</span> Управление переменными и DOM-элементами через useState, useEffect, useContext и useRef.<br>
-        <span class="font-weight_bold color_red">14.</span> Создание многостраничного SPA-приложения через React Router.
+        <span class="font-weight_bold color_red">14.</span> Создание многостраничного SPA-приложения через React Router.<br>
+        <span class="font-weight_bold color_red">15.</span> Работа с токеном при авторизации и выходе.<br>
+        <span class="font-weight_bold color_red">16.</span> Писать сервер на Node.js.<br>
+        <span class="font-weight_bold color_red">17.</span> Серверная разработка на фреймворке Express.<br>
+        <span class="font-weight_bold color_red">18.</span> Использование базы данных MongoDB.<br>
+        <span class="font-weight_bold color_red">19.</span> Обработка ошибок на Node.js.
       </p>
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__logo"></div>
+    <p class="footer__copyright">&#169; Волошин Артём. 2022</div>
   </footer>
 </body>
 </html>
